feat: 初步完成搜索框功能

--- a/posts/个人开发日志.md
+++ b/posts/个人开发日志.md
@@ -21,13 +21,14 @@ top: true
 
 目标：实现点击多个标签能显示包含任一标签的文章，搜索框能搜索并直接显示符合条件的文章
 
-1. 多个标签查询 ✅
+-[✅] 多个标签查询
 
-2. 搜索框
-
-   最终想实现类似bing的搜索框效果，遮罩✔️+[防抖](https://segmentfault.com/a/1190000023374668)+搜索建议+搜索记录
+-[-] 搜索框（最终想实现类似bing的搜索框效果，遮罩✔️+[防抖](https://segmentfault.com/a/1190000023374668)+搜索建议+搜索记录）
 
 实现过程中遇到的问题和知识点：
 
 1. 知识点：Nextjs 的[浅路由](https://www.nextjs.cn/docs/routing/shallow-routing)
 2. 实现方式：一开始想到用路由来判断查询条件（因为黄玄的博客就是以这种方式实现的），捣腾了半天的next/router，后来发现可以直接使用useState管理。
+
+## 2021.10.28
+
