feat: 完善markdown的渲染

--- a/posts/组件库.md
+++ b/posts/组件库.md
@@ -6,9 +6,11 @@ tags: ['技术文章']
 
 ## [文章：组件库的技术选型和设计](https://juejin.cn/post/6921588546700574734)
 
+###### Table of Content
+
 ### 知识点
 
-1. [流式渲染](https://zhuanlan.zhihu.com/p/362893963#:~:text=首先%2C 简单介绍一下什么是流式渲染. 流式渲染是利用 http1.1 的 分块传输编码 的特性%2C 让服务端分块返回,这样有助于页面的首屏展现%2C 提升用户体验. 分块传输编码（Chunked transfer encoding）是超文本传输协议（HTTP）中的一种数据传输机制，允许 HTTP 由网页服务器发送给客户端应用（ 通常是网页浏览器）的数据可以分成多个部分。)
+1. [流式渲染](https://zhuanlan.zhihu.com/p/362893963#:~:text=%E6%B5%81%E5%BC%8F%E6%B8%B2%E6%9F%93.%20%E9%A6%96%E5%85%88%2C%20%E7%AE%80%E5%8D%95%E4%BB%8B%E7%BB%8D%E4%B8%80%E4%B8%8B%E4%BB%80%E4%B9%88%E6%98%AF%E6%B5%81%E5%BC%8F%E6%B8%B2%E6%9F%93.%20%E6%B5%81%E5%BC%8F%E6%B8%B2%E6%9F%93%E6%98%AF%E5%88%A9%E7%94%A8%20http1.1%20%E7%9A%84%20%E5%88%86%E5%9D%97%E4%BC%A0%E8%BE%93%E7%BC%96%E7%A0%81,%E7%9A%84%E7%89%B9%E6%80%A7%2C%20%E8%AE%A9%E6%9C%8D%E5%8A%A1%E7%AB%AF%E5%88%86%E5%9D%97%E8%BF%94%E5%9B%9E%20html%20%2C%20%E6%B5%8F%E8%A7%88%E5%99%A8%E5%8F%AF%E4%BB%A5%E5%9C%A8%E6%8E%A5%E6%94%B6%E6%97%B6%E9%80%90%E6%AD%A5%E6%B8%B2%E6%9F%93%E9%A1%B5%E9%9D%A2%2C%20%E8%BF%99%E6%A0%B7%E6%9C%89%E5%8A%A9%E4%BA%8E%E9%A1%B5%E9%9D%A2%E7%9A%84%E9%A6%96%E5%B1%8F%E5%B1%95%E7%8E%B0%2C%20%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E4%BD%93%E9%AA%8C.)
 
    流式渲染是利用 `http1.1` 的 **分块传输编码** 的特性, 让服务端分块返回 `html` , 浏览器可以在接收时逐步渲染页面, 这样有助于页面的首屏展现, 提升用户体验
 
