--- a/posts/个人开发日志.md
+++ b/posts/个人开发日志.md
@@ -7,6 +7,8 @@ top: true
 
 # 个人网站开发日志
 
+###### Table of Content
+
 ## 2021.10.27
 
 发现自己有个坏习惯，遇到一个问题喜欢先试，而不是静下心来学习，试完成功了就丢到一边也不知道整理。
@@ -21,9 +23,9 @@ top: true
 
 目标：实现点击多个标签能显示包含任一标签的文章，搜索框能搜索并直接显示符合条件的文章
 
--[✅] 多个标签查询
+- [x] 多个标签查询
 
--[-] 搜索框（最终想实现类似bing的搜索框效果，遮罩✔️+[防抖](https://segmentfault.com/a/1190000023374668)+搜索建议+搜索记录）
+- [ ] 搜索框（最终想实现类似bing的搜索框效果，遮罩✔️+[防抖](https://segmentfault.com/a/1190000023374668)+搜索建议+搜索记录）
 
 实现过程中遇到的问题和知识点：
 
