--- a/posts/优雅地实现一个搜索框.md
+++ b/posts/优雅地实现一个搜索框.md
@@ -6,6 +6,8 @@ tags: ['技术文章']
 
 # 如何优雅地实现一个搜索框？
 
+###### Table of Content
+
 开发环境
 
 实现功能：遮罩✔️+搜索建议+搜索记录+[防抖](https://segmentfault.com/a/1190000023374668)
